Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All

{{$NEXT}}

1.001000 2014-10-15T22:42:03Z f59f09b
 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +8 ↑2 -3 (suggests: +2 -1)
 - runtime: +1
 - test: +2 -7 (recommends: ↑2 -1)

 [Internals]
 - Implement dump_config with config_dumper
 - Implement tests with dztest

 [Metadata]
 - Show 1x Contributor
 - Move to Kentnl org
 - Set author=kentnl@cpan.org

1.000000 2014-05-02T09:30:17Z
 [00 Minor]
 - No important code changes
 - Just packaging changes downstream vendors who work by hand may have to worry about.

 [01 Toolkit Change]
 - Uses ExtUtils::MakeMaker instead of Module::Build
 - Dependencies softened ( aka: No longer building with ourselves )

 [02 Version scheme change]
 - now uses x.123456 instead of x.y.z
 - this is the primary reason for the 1.x on the box.

 [Dependencies::Aggregate]
 - 5.008009 : ? → 205
 - 5.010001 : ? → 184
 - 5.018000 : 163 → ?
 - 5.018002 : ? → 170
 - 5.019000 : 163 → ?
 - 5.019009 : ? → 165

 [Dependencies::Stats]
 - Dependencies changed since 0.1.2, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +42 ↓5 -2 (recommends: -1, suggests: +1 -1)
 - runtime: +1 ↑1 ↓3
 - test: +5 ↓5 -5 (recommends: +4)

0.1.2 2013-09-25T13:43:34Z
 [00 Minor/Bugfix]
 - Rebuild to get latest Test::Compile test which is not broken on Win32
 - Added one basic test

 [Dependencies::Stats]
 - Dependencies changed since 0.1.1, see misc/*.deps* for details
 - develop: ↑3 (recommends: ↑1)
 - runtime: ↑2
 - test: +7

0.1.1 2013-08-31T02:39:00Z
 [!Minor]
 - Rebuild Tests w/ newer Test::Compile

 [Dependencies::Stats]
 - Dependencies changed since 0.1.0, see misc/*.deps* for details
 - develop: +1 ↑2 (suggests: ↑1)
 - test: +2 -2

0.1.0 2013-08-07T23:27:23Z
 - First version.
