@@ -1,2 +1,3 @@
-.build
-Dist-Zilla-Plugin-Prereqs-MatchInstalled-All-*
+/.build
+/Dist-Zilla-Plugin-Prereqs-MatchInstalled-All-*
+/tmp/
