@@ -1,6 +1,18 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001001
+ [Added / configure suggests]
+ - JSON::PP 2.27300
+
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 1.001000 2014-10-15T22:42:03Z
  [Changed / test recommends]
@@ -23,4 +35,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.1.2 2013-09-25T13:43:34Z
 
 0.1.1 2013-08-31T02:39:00Z
-
