@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001000, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1, suggests: +1)
+ - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 1.001000 2014-10-15T22:42:03Z f59f09b
  [Dependencies::Stats]
@@ -70,4 +78,3 @@ Release history for Dist-Zilla-Plugin-Prereqs-MatchInstalled-All
 
 0.1.0 2013-08-07T23:27:23Z
  - First version.
-
